burger picture width fixed on safari (by adding constant height)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -103,16 +103,18 @@ html {
         &:hover {
           border-bottom: $feature-yellow;
         }
-        .navbar-brand {
-          .navbar-item {
+      }
+      .navbar-brand {
+        height: 3.25rem;
+        .navbar-item {
 
-          }
         }
       }
       .navbar-brand .navbar-item {
         font-size: 2rem;
         img {
-          height: 100%;
+          height: 3rem;
+          margin-left: 5px;
         }
       }
       .navbar-brand .navbar-item, .navbar-brand .navbar-burger, .navbar-menu .navbar-start .navbar-item, .navbar-menu .navbar-end .navbar-item {
